tests/tests/errors/2006-20.vb
'#compiler-options:-reference:
'#compiler-message:Command line error BC2006 : option 'reference' requires ':<file_list>'
'#exit-code:1